<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/Black"
    android:padding="2.0dip">

    <TextView
        android:id="@+id/mainActivityCanceledAdviceDialogTitle"
        style="@style/DialogTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="10.0dip"
        android:text="@string/main_activity_canceled_advice_title" />

    <TextView
        android:id="@+id/mainActivityCanceledAdviceDialogText"
        style="@style/DialogText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainActivityCanceledAdviceDialogTitle"
        android:layout_marginLeft="10.0dip"
        android:layout_marginTop="20.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginBottom="20.0dip"
        android:text="@string/main_activity_canceled_advice_message" />

    <CheckBox
        android:id="@+id/mainActivityCanceledAdviceCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mainActivityCanceledAdviceDialogText"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10.0dip"
        android:button="@drawable/check_box"
        android:onClick="checkHelp"
        android:text="@string/disable_help" />

    <Button
        android:id="@+id/mainActivityCanceledAdviceDialogButton"
        style="@style/DialogButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/mainActivityCanceledAdviceCheckBox"
        android:layout_alignParentRight="true"
        android:layout_margin="10.0dip"
        android:background="@drawable/continue1"
        android:onClick="toCancelAlarm" />
</RelativeLayout>